--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,10 +13,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install Dependencies
         run: |
-          cd PexinxaReactApp/pexinxa-front
+          cd C:/Users/icaro/OneDrive/Documents/PexinxaReactApp/pexinxa-front
           npm install
       - run: |
-          cd PexinxaReactApp
+          cd C:/Users/icaro/OneDrive/Documents/PexinxaReactApp/pexinxa-front
           npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
