--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,9 +10,9 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - run: |
-          cd PexinxaReactApp/pexinxa-front
+          cd $GITHUB_WORKSPACE/PexinxaReactApp/pexinxa-front/
           npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
