--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,18 +1,28 @@
-name: Create Card in GitHub Project
+name: Create Draft Issue in GitHub Project
 
 on:
-  issues:
-    types: [opened]
-
+  workflow_dispatch:
+    inputs:
+      issue-title:
+        description: 'Título da Issue'
+        required: true
+      issue-body:
+        description: 'Descrição da Issue'
+        required: true
+        
 jobs:
-  move-card:
+  create-draft-issue:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Change directory to subfolder
-        run: cd ./pexinxa-front
+      - name: Create issue with Draft label
+        uses: peter-evans/create-issue@v2
+        with:
+          title: ${{ github.event.inputs.issue-title }}
+          body: ${{ github.event.inputs.issue-body }}
+          labels: 'Draft'
 
       - uses: alex-page/github-project-automation-plus@v0.3.0
         with:
