--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -15,10 +15,15 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Install Dependencies
-        run: npm install
+        run: |
+              cd pexinxa-front
+              npm install -g firebase-tools
+              npm install
          
       - name: Build Frontend
-        run: npm ci && npm run build
+        run: |
+              cd pexinxa-front
+              npm ci && npm run build
       
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
