--- a/pexinxa-front/package.json
+++ b/pexinxa-front/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "firebase": "^10.13.1",
     "firebase-tools": "^13.16.0",
+    "lucide-react": "^0.446.0",
+    "radix-ui": "^1.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
