--- a/pexinxa-front/package.json
+++ b/pexinxa-front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "firebase": "^10.13.1",
     "firebase-tools": "^13.16.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.446.0",
     "radix-ui": "^1.0.1",
     "react": "^18.3.1",
