--- a/pexinxa-front/package.json
+++ b/pexinxa-front/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "firebase": "^10.13.1",
     "firebase-tools": "^13.16.0",
     "js-cookie": "^3.0.5",
@@ -20,6 +21,8 @@
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
