--- a/pexinxa-front/package.json
+++ b/pexinxa-front/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@tailwindcss/typography": "^0.5.15",
     "firebase": "^10.13.1",
     "firebase-tools": "^13.16.0",
