--- a/pexinxa-front/package.json
+++ b/pexinxa-front/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
+    "@react-google-maps/api": "^2.20.3",
     "@tailwindcss/typography": "^0.5.15",
     "firebase": "^10.13.1",
     "firebase-tools": "^13.16.0",
