--- a/pexinxa-front/package.json
+++ b/pexinxa-front/package.json
@@ -16,7 +16,10 @@
     "firebase": "^10.13.1",
     "firebase-tools": "^13.16.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.446.0",
+    "papaparse": "^5.4.1",
     "radix-ui": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
