--- a/pexinxa-front/package.json
+++ b/pexinxa-front/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.446.0",
     "papaparse": "^5.4.1",
     "radix-ui": "^1.0.1",
@@ -25,6 +26,7 @@
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
