--- a/pexinxa-front/package.json
+++ b/pexinxa-front/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@react-google-maps/api": "^2.20.3",
     "@tailwindcss/typography": "^0.5.15",
+    "axios": "^1.7.8",
     "firebase": "^10.13.1",
     "firebase-tools": "^13.16.0",
     "js-cookie": "^3.0.5",
