--- a/pexinxa-front/package.json
+++ b/pexinxa-front/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.8",
     "firebase": "^10.13.1",
     "firebase-tools": "^13.16.0",
+    "framer-motion": "^11.12.0",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
